--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,54 @@
+# mkdocs.yml
 site_name: SignalPilot Docs
+site_description: Non‑repainting, alert‑ready TradingView indicators for any market/timeframe.
 site_url: https://signalpilot.github.io/signalpilot-docs/
 repo_url: https://github.com/Signalpilot/signalpilot-docs
+repo_name: signalpilot-docs
+
 theme:
   name: material
+  features:
+    - navigation.top
+    - navigation.instant
+    - navigation.sections
+    - content.code.copy
+    - search.suggest
+    - search.highlight
   palette:
     - scheme: slate
       primary: teal
       accent: cyan
+
 plugins:
   - search
+
+markdown_extensions:
+  - admonition
+  - attr_list
+  - footnotes
+  - md_in_html
+  - tables
+  - toc:
+      permalink: true
+
 nav:
   - Home: index.md
+  - Modules:
+    - SP — OBV Pro: sp-obv-pro.md
+    - Signal Pilot Pro — MACD+: spp-macd-plus.md
+    - SP — RSI Triad Confirm: sp-rsi-triad-confirm.md
+    - SP — PVA Volume: sp-pva-volume.md
+    - SP — PVA Overlay: sp-pva-overlay.md
+    - SP — SRSI+: sp-srsi-plus.md
+    - SP — EC Pro: sp-ec-pro.md
+    - SP — Key Levels Suite: sp-key-levels-suite.md
+    - SP — SML (Structure & Liquidity): sp-sml-structure-liquidity.md
+    - SP — Regime & Volatility Filter: sp-regime-vol-filter.md
+    - SP — EMA Trio Pro: sp-ema-trio-pro.md
+    - SP — RCS (Reversal Structure): sp-rcs-reversal-structure.md
+    - SP — SDZones Pro: sp-sdzones-pro.md
+    - SP — LTF: sp-ltf.md
+    - SP — Oscillator Matrix: sp-oscillator-matrix.md
+    - SP — Screener (SFX Table): sp-screener-sfx.md
+  - Website Tiles:
+    - Product Cards: _product-cards.md
