--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,11 @@ site_url: https://signalpilot.github.io/signalpilot-docs/
 repo_url: https://github.com/Signalpilot/signalpilot-docs
 repo_name: signalpilot-docs
 
+extra:
+  analytics:
+    provider: google
+    property: G-NZ05GV72K0
+
 theme:
   name: material
   features:
