--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ nav:
   - Home: index.md
   - Modules:
     - SP — OBV Pro: sp-obv-pro.md
-    - Signal Pilot Pro — MACD+: spp-macd-plus.md
+    - SP — MACD+: spp-macd-plus.md
     - SP — RSI Triad Confirm: sp-rsi-triad-confirm.md
     - SP — PVA Volume: sp-pva-volume.md
     - SP — PVA Overlay: sp-pva-overlay.md
