--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,19 +1,27 @@
 name: Deploy MkDocs
+
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
+
 permissions:
   contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-      - run: |
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
-          pip install mkdocs-material
-      - run: mkdocs gh-deploy --force
+          pip install -r requirements.txt
+
+      - name: Build & Deploy
+        run: mkdocs gh-deploy --force
