--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Install MkDocs toolchain (no requirements.txt)
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install "mkdocs==1.6.0" "mkdocs-material==9.5.28"
 
       - name: Build & Deploy
         run: mkdocs gh-deploy --force
