--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: SignalPilot Docs
 site_description: Non‑repainting, alert‑ready TradingView indicators for any market/timeframe.
-site_url: https://signalpilot.github.io/signalpilot-docs/
+site_url: https://docs.signalpilot.io/
 repo_url: https://github.com/Signalpilot/signalpilot-docs
 repo_name: signalpilot-docs
 
