--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,7 @@ nav:
     - SP — RSI Triad Confirm: sp-rsi-triad-confirm.md
     - SP — PVA Volume: sp-pva-volume.md
     - SP — PVA Overlay: sp-pva-overlay.md
-    - SP — SRSI+: sp-srsi-plus.md
+    - SP — Context Stoch (SRSI+): sp-contextstoch-rsi.md
     - SP — EC Pro: sp-ec-pro.md
     - SP — Key Levels Suite: sp-key-levels-suite.md
     - SP — SML (Structure & Liquidity): sp-sml-structure-liquidity.md
