--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: SignalPilot Docs
-site_description: Non‑repainting, alert‑ready TradingView indicators for any market/timeframe.
+site_description: Non-repainting, alert-ready TradingView indicators for any market/timeframe.
 site_url: https://docs.signalpilot.io/
 repo_url: https://github.com/Signalpilot/signalpilot-docs
 repo_name: signalpilot-docs
@@ -38,29 +38,38 @@ nav:
   - Start Here:
     - Quick Start: start-quickstart.md
     - Set TradingView Alerts: how-to-alerts.md
-    - Screener Table (On‑chart): how-to-screener.md
+    - Screener Table (On-chart): how-to-screener.md
     - Webhooks (TradingView → Bot): how-to-webhooks.md
 
   - Modules:
-    - SP — Momentum Regime (MACD+): spp-macd-plus.md
-    - SP — Trend Stack (EMA 50/100/200 Pro): sp-ema-trio-pro.md
-    - SP — Momentum Matrix (Panel Pro): sp-oscillator-matrix.md
-    - SP — Participation (PVA Overlay): sp-pva-overlay.md
-    - SP — Volume Pulse (PVA Volume): sp-pva-volume.md
-    - SP — Flow Balance (OBV Pro): sp-obv-pro.md
-    - SP — Structure Map (SML): sp-sml-structure-liquidity.md
-    - SP — SD Zones (SDZones Pro): sp-sdzones-pro.md
-    - SP — Key Anchors (Key Levels Suite): sp-key-levels-suite.md
-    - SP — RSI Triad Confirm: sp-rsi-triad-confirm.md
-    - SP — Context Stoch (SRSI+): sp-contextstoch-rsi.md
-    - SP — Leg Timer (TD9+ Clean Squeeze): sp-ltf.md
-    - SP — Regime Box (Regime & Volatility Filter): sp-regime-vol-filter.md
-    - SP — Reversal Engine (EC Pro): sp-ec-pro.md
-    - SP — Screener (Screener Table): sp-screener-sfx.md
+      - "🧭 Bias / Momentum":
+          - "SP — Momentum Regime (MACD+)": spp-macd-plus.md
+          - "SP — Trend Stack (EMA 50/100/200 Pro)": sp-ema-trio-pro.md
+          - "SP — Momentum Matrix (Panel Pro)": sp-oscillator-matrix.md
+
+      - "💧 Participation (Volume / Flow)":
+          - "SP — Participation (PVA Overlay)": sp-pva-overlay.md
+          - "SP — Volume Pulse (PVA Volume)": sp-pva-volume.md
+          - "SP — Flow Balance (OBV Pro)": sp-obv-pro.md
+
+      - "🏗️ Structure / Levels":
+          - "SP — Structure Map (SML)": sp-sml-structure-liquidity.md
+          - "SP — SD Zones (SDZones Pro)": sp-sdzones-pro.md
+          - "SP — Key Anchors (Key Levels Suite)": sp-key-levels-suite.md
+
+      - "⏱️ Timing":
+          - "SP — RSI Triad Confirm": sp-rsi-triad-confirm.md
+          - "SP — Context Stoch (SRSI+)": sp-contextstoch-rsi.md
+          - "SP — Leg Timer (TD9+ Clean Squeeze)": sp-ltf.md
+          - "SP — Reversal Engine (EC Pro)": sp-ec-pro.md
+
+      - "🧩 Meta / Tools":
+          - "SP — Regime Box (Regime & Volatility Filter)": sp-regime-vol-filter.md
+          - "SP — Screener (Screener Table)": sp-screener-sfx.md
 
   - Reference:
     - Suite Workflow (Bias → Timing): ref-workflow.md
-    - Non‑Repainting Policy: ref-non-repaint.md
+    - Non-Repainting Policy: ref-non-repaint.md
     - Glossary: ref-glossary.md
 
   - About:
