--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,11 +17,17 @@ theme:
     - scheme: slate
       primary: teal
       accent: cyan
-  logo: assets/logo.png     # (optional – add later)
-  favicon: assets/logo.png  # (optional – add later)
+  logo: assets/logo.png
+  favicon: assets/logo.png
 
 plugins:
   - search
+  # - sitemap:         # optional: enable if installed
+  #     changefreq: weekly
+  #     priority: 0.6
+  # - redirects:       # optional: enable if installed
+  #     redirect_maps:
+  #       sp-ema-trio.md: sp-ema-trio-pro.md
 
 markdown_extensions:
   - admonition
@@ -31,6 +37,8 @@ markdown_extensions:
   - tables
   - toc:
       permalink: true
+  - pymdownx.details
+  - pymdownx.superfences
 
 nav:
   - Home: index.md
@@ -62,15 +70,16 @@ nav:
           - "SP — Context Stoch (SRSI+)": sp-contextstoch-rsi.md
           - "SP — Leg Timer (TD9+ Clean Squeeze)": sp-ltf.md
           - "SP — Reversal Engine (EC Pro)": sp-ec-pro.md
+          # - "SP — Reversal Candlestick Structure (RCS)": sp-rcs.md   # uncomment if present
 
       - "🧩 Meta / Tools":
           - "SP — Regime Box (Regime & Volatility Filter)": sp-regime-vol-filter.md
           - "SP — Screener (Screener Table)": sp-screener-sfx.md
 
   - Reference:
-    - Suite Workflow (Bias → Timing): ref-workflow.md
-    - Non-Repainting Policy: ref-non-repaint.md
-    - Glossary: ref-glossary.md
+      - Suite Workflow (Bias → Timing): ref-workflow.md
+      # - Non-Repainting Policy: ref-non-repaint.md    # uncomment if file exists
+      # - Glossary: ref-glossary.md                    # uncomment if file exists
 
   - About:
     - FAQ: about-faq.md
@@ -83,6 +92,5 @@ nav:
 extra:
   analytics:
     provider: google
-    property: G-NZ05GV72K0      # your GA4 ID (already provided)
+    property: G-NZ05GV72K0
 
-# Optional: if you’re adding many images later, keep them in docs/assets/
