--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,12 +22,6 @@ theme:
 
 plugins:
   - search
-   - sitemap:
-       changefreq: weekly
-       priority: 0.6
-   - redirects:
-       redirect_maps:
-         sp-ema-trio.md: sp-ema-trio-pro.md
 
 markdown_extensions:
   - admonition
@@ -44,10 +38,10 @@ nav:
   - Home: index.md
 
   - Start Here:
-    - Quick Start: start-quickstart.md
-    - Set TradingView Alerts: how-to-alerts.md
-    - Screener Table (On-chart): how-to-screener.md
-    - Webhooks (TradingView → Bot): how-to-webhooks.md
+    - "Quick Start": start-quickstart.md
+    - "Set TradingView Alerts": how-to-alerts.md
+    - "Screener Table (On-chart)": how-to-screener.md
+    - "Webhooks (TradingView → Bot)": how-to-webhooks.md
 
   - Modules:
       - "🧭 Bias / Momentum":
@@ -74,7 +68,7 @@ nav:
           - "SP — Context Stoch (SRSI+)": sp-contextstoch-rsi.md
           - "SP — Leg Timer (TD9+ Clean Squeeze)": sp-ltf.md
           - "SP — Reversal Engine (EC Pro)": sp-ec-pro.md
-          # - "SP — Reversal Candlestick Structure (RCS)": sp-rcs.md   # uncomment if present
+          - "SP — Reversal Candlestick Structure (RCS)": sp-rcs-reversal-structure.md
 
       - "🧩 Meta / Tools":
           - "Overview": meta-tools/index.md
@@ -82,17 +76,17 @@ nav:
           - "SP — Screener (Screener Table)": sp-screener-sfx.md
 
   - Reference:
-      - Suite Workflow (Bias → Timing): ref-workflow.md
-      - Non-Repainting Policy: ref-non-repaint.md
-      - Glossary: ref-glossary.md
+      - "Suite Workflow (Bias → Timing)": ref-workflow.md
+       - "Non-Repainting Policy": ref-non-repaint.md
+       - "Glossary": ref-glossary.md
 
   - About:
-    - FAQ: about-faq.md
-    - Support & Access: about-support.md
-    - Changelog (high level): about-changelog.md
+    - "FAQ": about-faq.md
+    - "Support & Access": about-support.md
+    - "Changelog (high level)": about-changelog.md
 
   - Website Tiles:
-    - Product Cards: _product-cards.md
+    - "Product Cards": _product-cards.md
 
 extra:
   analytics:
