--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,16 +2,15 @@ name: Build & Deploy Docs
 
 on:
   push:
-    branches: [ main ]   # change if your default branch is different
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
-  contents: write   # needed for pushing to gh-pages
+  contents: write
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,12 +20,11 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install MkDocs toolchain
+      - name: Install MkDocs toolchain (from requirements.txt)
         run: pip install -r requirements.txt
 
       - name: Build (sanity check)
         run: mkdocs build --strict
 
-      - name: Deploy to GitHub Pages (gh-pages branch)
+      - name: Deploy to GitHub Pages (gh-pages)
         run: mkdocs gh-deploy --force --no-history
- 
