--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,10 +20,28 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install MkDocs toolchain (from requirements.txt)
-        run: pip install -r requirements.txt
+      - name: Show repo root contents (debug)
+        run: ls -la
 
-      - name: Build (sanity check)
+      - name: Show requirements.txt (debug)
+        run: |
+          test -f requirements.txt && cat requirements.txt || (echo "requirements.txt NOT FOUND" && exit 1)
+
+      - name: Install MkDocs toolchain (from requirements.txt)
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Guarantee macros plugin is present
+        run: |
+          pip install mkdocs-macros-plugin
+          python - <<'PY'
+          import importlib, sys
+          assert importlib.util.find_spec("mkdocs_macros_plugin"), "mkdocs-macros-plugin not importable"
+          print("mkdocs-macros-plugin OK")
+          PY
+
+      - name: Build (strict)
         run: mkdocs build --strict
 
       - name: Deploy to GitHub Pages (gh-pages)
