--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,9 @@ theme:
 plugins:
   - search
   - macros
+  - sitemap:
+      changefreq: weekly
+      priority: 0.6
 
 markdown_extensions:
   - admonition
