--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,9 +16,19 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Python
+        id: py
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ steps.py.outputs.python-version }}-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ steps.py.outputs.python-version }}-
+            ${{ runner.os }}-pip-
 
       - name: Show repo root contents (debug)
         run: ls -la
@@ -33,8 +43,8 @@ jobs:
           pip install -r requirements.txt
           pip show mkdocs mkdocs-material mkdocs-macros-plugin
 
-      - name: Build (strict)
-        run: mkdocs build --strict
+      - name: Build site
+        run: mkdocs build
 
       - name: Deploy to GitHub Pages (gh-pages)
         run: mkdocs gh-deploy --force --no-history
