--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,10 +65,12 @@ markdown_extensions:
 extra_css:
   - assets/stylesheets/extra.css
   - assets/brand.css
+  - assets/aurora.css
 
 # New: brand.js injects the 6‑link brand nav (if you choose) and syncs ?t=dark|light
 extra_javascript:
   - assets/brand.js
+  - assets/aurora.js
 
 nav:
   - Home: index.md
