--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,11 +66,13 @@ extra_css:
   - assets/stylesheets/extra.css
   - assets/brand.css
   - assets/aurora.css
+  - assets/constellations.css
 
 # New: brand.js injects the 6‑link brand nav (if you choose) and syncs ?t=dark|light
 extra_javascript:
   - assets/brand.js
   - assets/aurora.js
+  = assets/constellations.js
 
 nav:
   - Home: index.md
