Update Pentarch v1.0 section in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -112,7 +112,7 @@ nav:
 
   - "🚀 Suite (Latest)":
     - "📚 Suite Overview": suite-index.md
-    - "Pentarch v1.0 — Reversal Events": pentarch-v10.md
+    - "Pentarch v1.0 — Five Cycle Events": pentarch-v10.md
     - "Janus Atlas v1.0 — Levels System": janus-atlas-v10.md
     - "Omnideck v1.0 — Everything Indicator": omnideck-v10.md
     - "Augury Grid v1.0 — Multi-Symbol Screener": augury-grid-v10.md
